--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -126,7 +126,7 @@
                         android:text="@string/title_quota" />
 
                     <TextView
-                        android:id="@+id/tv_event_quota"
+                        android:id="@+id/tv_event_remaining_quota"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
@@ -134,7 +134,7 @@
                         app:layout_constraintStart_toEndOf="@id/tv_title_quota"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="@id/tv_title_quota"
-                        tools:text="@tools:sample/lorem" />
+                        tools:text="Remaining Quota: 0" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
